--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <!--  Last Published: Tue May 03 2022 14:16:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="626be9762022d9019ed074d6" data-wf-site="626be9762022d948acd074d4">
 <head>
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-M3XW279');</script>
-<!-- End Google Tag Manager -->
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5EM9V63QZJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5EM9V63QZJ');
+</script>
   <meta charset="utf-8">
   <title>Este truque simples pode fazer você recuperar a visão nítida e cristalina em 21 dias</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -24,11 +26,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 </head>
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M3XW279"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-
   <div class="section-2 wf-section">
     <div class="container-5 w-container">
       <h1 class="heading-2">Você e algumas pessoas próximas <strong class="yellow"><span id="locationJS"></span></strong> foram selecionados para participar deste programa.</h1>
