--- a/Pvc1/index.html
+++ b/Pvc1/index.html
@@ -352,7 +352,7 @@
           <span></span>
         </div>
       </a>
-      <link rel="prefetch" href="https://go.hotmart.com/H73580843I?ap=cf55">
+      <link rel="prefetch" href="https://go.hotmart.com/H73580843I?ap=cf55&src=A1">
     </div>
   </div>
   <div class="wf-section">
